Added filters and Contact us form

--- a/templates/base.html
+++ b/templates/base.html
@@ -111,9 +111,9 @@
                                 </a>
                             </div>
                             <p>
-                                finloan@support.com <br>
-                                +10 873 672 6782 <br>
-                                600/D, Green road, NewYork
+                                {{myinfo.email}} <br>
+                                {{myinfo.phone_number}} <br>
+                                {{myinfo.place}}
                             </p>
                             <div class="socail_links">
                                 <ul>
