--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,13 @@
                                             <li><a href="/">home</a></li>
                                             <li><a href="{% url "jobs:job_list" %}">Browse Job</a></li>
                                             <li><a href="{% url "contact:contact" %}">Contact</a></li>
+                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                                <ul class="submenu">
+                                                    <li><a href="{% url "pagess:candidates" %}">Candidates</a></li>
+                                                    <li><a href="job_details.html">job details </a></li>
+                                                    <li><a href="elements.html">elements</a></li>
+                                                </ul>
+                                            </li>
                                         </ul>
                                     </nav>
                                 </div>
