added blog list

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,7 @@
                                                     <li><a href="job_details.html">job details </a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
+                                                <li><a href="{% url "blog:blog_list" %}">blog</a></li>
                                             </li>
                                         </ul>
                                     </nav>
